--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-*.pyc
-.env
-node_modules
+# phpstorm project files
+.idea/*
+
+# netbeans project files
+nbproject
+
+# zend studio for eclipse project files
+.buildpath
+.project
+.settings
+
+# windows thumbnail cache
+Thumbs.db
+
+# build
+/build/*
+
+# node
+/node_modules/*
+
+# bower
+/bower_components/*
+
+# test coverage
+test-results
